crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__skip_include__emit_only_possible_cases.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type QueryResult = Schema.__SelectionSet<Schema.Query, {
  me: Schema.__SelectionSet<Schema.User, {
    id: Schema.ID;
    name?: never;
  }, {}> | Schema.__SelectionSet<Schema.User, {
    id?: never;
    name: Schema.String;
  }, {}>;
}, {}>;

type QueryVariables = {
  flag: Schema.Boolean;
};

declare const Query: TypedDocumentNode<QueryResult, QueryVariables>;

export { Query as default };


